Segundo Commit Reportes VicenteDEV